@@ -90,8 +90,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © Michal Josef Špaček 2013-2015
-     BSD 2-Clause License
+    © Michal Josef Špaček 2013-2015
+
+    BSD 2-Clause License
 
 VERSION
     0.03
