@@ -1,4 +1,5 @@
 0.03
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author name.
 
